--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="box-2">
         <h1>Goodbye World</h1>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste nulla assumenda amet magnam delectus magni repudiandae modi officiis, cumque quae, asperiores accusantium. Quibusdam necessitatibus pariatur animi ullam expedita natus fugit.</p>
+        <a class="button" href="">Read More</a>
     </div>
     <div class="categories">
         <h2>Categories</h2>
@@ -25,6 +26,34 @@
             <li><a href="#">Category 4</a></li>
         </ul>
     </div>
-    </div>
+        <form class="my-form">
+            <div class="form-group">
+                <label>Name: </label>
+                <input type="text" name="name">
+            </div>
+            <div class="form-group">
+                <label>Email: </label>
+                <input type="email" name="email">
+            </div>
+            <div class="form-group">
+                <label>Message: </label>
+                <textarea name="message"></textarea>
+            </div>
+            <input class="button" type="submit" value="Submit" name="">
+        </form>
+        <div class="block">
+            <h3>Heading 1</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus autem tempore delectus debitis animi ipsam!</p>
+        </div>
+        <div class="block">
+            <h3>Heading 2</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet magni quos nulla fugiat, tempore consectetur!</p>
+        </div>
+        <div class="block">
+            <h3>Heading 3</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam consequuntur consectetur tempora molestiae quaerat ipsa.</p>
+        </div>
+    </div><!--Container ends here-->
+    <div style="margin-top:500px;"></div>
 </body>
 </html>
