--- a/index.html
+++ b/index.html
@@ -53,7 +53,33 @@
             <h3>Heading 3</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam consequuntur consectetur tempora molestiae quaerat ipsa.</p>
         </div>
+        <div class="clr"></div> 
+        <div id="main-block">
+            <h3>Main Heading</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci debitis, quo illum dolores dolorum fugiat labore commodi tenetur dicta ipsam ut beatae repellendus consequatur. Doloremque ducimus dolore cumque ipsa soluta.</p>
+        </div>  
+        <div id="sidebar">
+            <h3>Sidebar Heading</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius dolorum in accusantium optio nemo soluta architecto sunt nam nostrum praesentium, saepe voluptatum ducimus commodi incidunt eaque, reprehenderit repudiandae consequatur ipsam.</p>
+        </div> 
+        <div class="clr"></div>
+        <div class="p-box">
+            <h1>Hello</h1>
+            <h2>Goodbye</h2>
+        </div>
+        <ul class=my-list>
+            <li>List Item</li>
+            <li>List Item</li>
+            <li>List Item</li>
+            <li>List Item</li>
+            <li>List Item</li>
+            <li>List Item</li>
+            <li>List Item</li>
+            <li>List Item</li>
+            <li>List Item</li>
+        </ul>
     </div><!--Container ends here-->
+    <a class="fix-me button" href="">Hello</a>
     <div style="margin-top:500px;"></div>
 </body>
 </html>
